# MissingLynk

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
devices/betafpv-vr04-air/: device.mk
devices/betafpv-vr04-goggle/: device.mk
docs/: adding-a-device.md
docs/guides/: building-a-flashable-image.md  consuming-the-stream.md  device-changes-and-revert.md  python-tooling.md  serial-and-debug-access.md
flasher/: .gitignore  Dockerfile  Dockerfile.windows  Dockerfile.windows.dockerignore  README.md  go.mod  go.sum  main.go
glue/: Makefile  README.md  glue.env.example
glue/boot/: console.py  drop-to-uboot.sh  flip-slot.sh  ram-boot-flashed-b.sh  ram-boot.sh  ramboot-at-uboot.sh  uboot-trigger.c  uboot_boot.py  wait-for-serial.py  wdt-reset.c  wdt.h
glue/capture/: cma-usage.sh  link-quality.sh  make-synth-session.py  ml-rf-replay.c  pcap-to-rfdump.py  ping-bench.sh  preview-stacked.sh  telem-continuity-watch.sh
glue/dev/: kdev.sh  push.sh
glue/docs/: clone-a-slot.md  first-setup-known-good-slot.md  flash-and-verify-slots.md  host-network-setup.md
glue/fetch/: fetch-vendor-blobs.sh
glue/flash/: flash-kernel-b.sh  flash-rootfs-b.sh  gpt_setactive.py  mkkernel.py  mlimg.py
glue/lib/: device.sh  serial_port.py  ssh-opts.sh  uboot.sh
glue/net/: 99-artosyn-bridge.rules  99-artosyn-unmanaged.conf  (+4 more)
missinglynk/: __init__.py  cli.py  components.py  connection.py  devices.py  firmware.py  framebuffer.py  progress.py
native/: air-qpower.c  build.sh  enc-import-test.c  fbtext.c  minidhcpd.c  ml-boot-record.c  ml-rf-persist.c  ml-rfcmd.c  mtdtool.c
(+52 files in other folders)
