[project]
name = "missinglynk"
version = "0.1.0"
description = "Tools for the BetaFPV VR04 / Artosyn ArtLynk FPV goggle: framebuffer capture and RTSP stream enable/disable over its USB-ethernet link."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    # SSH to the goggle's legacy-crypto Dropbear (cross-platform, no sshpass).
    # Pinned <4: paramiko 4.x/5.x REMOVED diffie-hellman-group1/14-sha1 and ssh-rsa,
    # which this Dropbear requires. 3.5.x still implements them.
    "paramiko>=3.5,<4",
    "numpy>=1.24",     # framebuffer decode
    "pillow>=10.0",    # PNG output
    # Kernel-container packing (glue/flash/mkkernel.py): U-Boot's LZ4 decompressor needs
    # INDEPENDENT frame blocks, which lz4.frame provides (block_linked=False).
    "lz4>=4",
    # Serial UART bridge for the boot ladder (glue/boot/* drop-to-U-Boot / RAM-boot, and
    # glue/recovery/* BootROM): console.py, uboot_boot.py, wait-for-serial.py all `import serial`.
    "pyserial>=3.5",
]

[project.scripts]
# one entry point, two subcommands (see `missinglynk --help`)
missinglynk = "missinglynk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["missinglynk"]
